# NLP_usecases

./: .pre-commit-config.yaml  README.md
sentiment_analysis/: README.md  pyproject.toml
sentiment_analysis/sentiment_analysis/configs/: config.yaml  utils.py
sentiment_analysis/sentiment_analysis/data_preparation/: retrieval.py
sentiment_analysis/sentiment_analysis/entrypoints/: generate_dataset.py  inference.py  test.py  train.py
sentiment_analysis/sentiment_analysis/inferencing/: inference.py
sentiment_analysis/sentiment_analysis/resources/: raw_dataset.csv  test_index.csv  train_index.csv
sentiment_analysis/sentiment_analysis/training/: mlflow_utils.py  optimize.py  training_pipelines.py
sentiment_analysis/sentiment_analysis/utils/: utils.py
text_classifier/: pyproject.toml
