[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"

[tool.poetry.scripts]
test = 'sentiment_analysis.entrypoints.test:test_get_config'
process_raw_data = 'sentiment_analysis.entrypoints.test:process_raw_data'
generate_dataset = 'sentiment_analysis.entrypoints.generate_dataset:generate_dataset_from_raw_data'
generate_indexes = 'sentiment_analysis.entrypoints.generate_dataset:generate_train_and_test_indexes'
test2 = 'sentiment_analysis.entrypoints.test:test_read_dataset'
data_pipeline = 'sentiment_analysis.entrypoints.test:transform_data'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
